--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.07</version><!--TODO Eliminate Snapshot if present -->
+    <version>3.08-SNAPSHOT</version><!--TODO Eliminate Snapshot if present -->
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
@@ -24,7 +24,7 @@
 
   <properties>
     <rails_common.version>1.11-SNAPSHOT</rails_common.version> <!--TODO Put new rails common version here if it has been changed -->
-    <isaac.version>3.07</isaac.version><!--TODO Eliminate Snapshot if present -->
+    <isaac.version>3.08-SNAPSHOT</isaac.version><!--TODO Eliminate Snapshot if present -->
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.	See ant execution below-->
   </properties>
