--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
                 <include>**/*</include>
               </includes>
             </fileset>
+            <fileset>  <!-- Stomp this file that seems to be created during builds-->
+              <directory>${basedir}/db/data/</directory>
+              <includes>
+                <include>**/*</include>
+              </includes>
+            </fileset>
           </filesets>
         </configuration>
       </plugin>
@@ -174,6 +180,7 @@
             </goals>
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
+              <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
               <command>bundle</command>
               <args>install</args>
             </configuration>
@@ -187,6 +194,7 @@
             </goals>
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
+              <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
               <command>rake</command>
               <args>db:rollback STEP=9999 RAILS_ENV=test db:migrate RAILS_ENV=test</args>
             </configuration>
@@ -200,6 +208,7 @@
             </goals>
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
+              <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
               <command>rake</command>
               <args>db:rollback STEP=9999 RAILS_ENV=production db:migrate RAILS_ENV=production</args>
             </configuration>
@@ -213,6 +222,7 @@
             </goals>
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
+              <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
               <command>rake</command>
               <args>test:units</args>
             </configuration>
@@ -226,6 +236,7 @@
             </goals>
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
+              <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
               <execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=/rails_prisme</execArgs>
               <command>rake</command>
               <args>devops:build_war</args>
