--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -4,3 +4,6 @@ log_manager=org.apache.logging.log4j.jul.LogManager
 # trim jobs older than x days old
 job_queue_trim=90
 resched_clean_queue_days=1
+#hitting http://localhost:3000/utilities/warmup
+#will cause ajax to warmup apache...
+warmup_apache = 500
