Stubbing out proxification of URLs for the front end UI -- this doesn't work yet...

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -7,3 +7,8 @@ resched_clean_queue_days=1
 #hitting http://localhost:3000/utilities/warmup
 #will cause ajax to warmup apache...
 warmup_apache = 500
+
+#Where various config files may live. Don't end in slash
+#the database file may live here too, but that location is configured in database.yml
+#database.yml is processed before our initializers run so it must be this way...
+data_directory = /app/prismeData
