--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 #  schema: prisme_test
 #  database: prisme_test
 #  url: jdbc:hsqldb:file:./db/data/prisme_test
-  <% if File.exists? '/app/prismeData/h2_prisme_test.mv.db' %>
+  <% if ((File.exists? '/app/prismeData/h2_prisme_test.mv.db') && !$rake) %>
   database: /app/prismeData/h2_prisme_test
   <% else %>
   database: db/data/h2_prisme_test
@@ -30,7 +30,7 @@ test:
 
 production:
   <<: *default
-  <% if File.exists? '/app/prismeData/h2_prisme_production.mv.db' %>
+  <% if ((File.exists? '/app/prismeData/h2_prisme_production.mv.db) && !$rake)' %>
   database: /app/prismeData/h2_prisme_production
   <% else %>
   database: db/data/h2_prisme_production
