finishing the de-proxification code... Rails (and I imagine all frameworks must do this) can detect and use the paths of their proxy server.  I need to de proxify these routes, so Komet and Isaac can get to the true routes...

--- a/config/service/service_url_proxy.yml
+++ b/config/service/service_url_proxy.yml
@@ -24,3 +24,5 @@ proxy_pass:
      location: /server_1_rails_a/
    - path: https://vaausappctt70477.aac.va.gov:8080/komet_a/ #this is like our incoming url
      location: /server_1_rails_a/
+   - path: https://vaauscttweb80.aac.va.gov:8080/isaac-rest
+     location: /isaac-rest
