--- a/config/server_config.yml
+++ b/config/server_config.yml
@@ -27,3 +27,5 @@ proxy_config_root:
      proxy_location: /server_1_rails_a/
    - incoming_url_path: https://vaausappctt70477.aac.va.gov:8080/komet_a/ #this is like our incoming url
      proxy_location: /server_1_rails_a/
+   - path: https://vaauscttweb80.aac.va.gov:8080/isaac-rest
+     location: /isaac-rest
