--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       <version>1.4.19</version>
     </dependency>
     <dependency>
+      <groupId>com.oracle.jdbc</groupId>
+      <artifactId>ojdbc7</artifactId>
+      <version>12.1.0.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
