--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,7 @@
-#drop all oracle tables and start over:
-# select 'drop table '||table_name||' cascade constraints;' from user_tables;
+#jdbc:h2:C:/work/ETS/rails_prisme/db/data/h2_prisme_development
 default: &default
-# see https://github.com/jruby/activerecord-jdbc-adapter/issues/479 regarding statement_escape_processing
-#  statement_escape_processing: true
-#  adapter: jdbc
-#  driver: oracle.jdbc.driver.OracleDriver
-  adapter: oracle_enhanced
-  database: xe
+#  adapter: hsqldb
+  adapter: jdbch2
   pool: 1000
 
 development:
