--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,6 @@
           </filesets>
         </configuration>
       </plugin>
-
       <!-- Extract the rails_common code into the correct place here, overwriting any existing version -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -151,8 +150,7 @@
               <overWriteReleases>true</overWriteReleases>
               <overWriteSnapshots>true</overWriteSnapshots>
             </configuration>
-          </execution>
-
+          </execution>>
           <execution>
             <id>place-jars</id>
             <phase>initialize</phase>
@@ -160,7 +158,6 @@
               <goal>copy-dependencies</goal>
             </goals>
             <configuration>
-              <!-- We really just want jenkins-client, cargo, and their transitive dependencies. -->
               <excludeArtifactIds>
                 jruby-complete,rake,bundler,rails_common,junit,log4j-slf4j-impl,log4j-jul,hamcrest-core,
               </excludeArtifactIds>
@@ -243,7 +240,7 @@
             <configuration>
               <jrubyVerbose>true</jrubyVerbose>
               <jrubyJvmArgs>-Djava.awt.headless=true</jrubyJvmArgs>
-              <execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=/rails_prisme</execArgs>
+              <execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=/rails_prisme PROJECT_VERSION="${project.version}"</execArgs>
               <command>rake</command>
               <args>devops:build_war</args>
             </configuration>
