--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <properties>
     <rails_common.version>1.32</rails_common.version> <!--TODO Put new rails common version here if it has been changed -->
     <!--Open up the assembly.xml file in rails common if new directories are added. -->
-    <isaac.version>3.15-SNAPSHOT</isaac.version><!--TODO Eliminate Snapshot if present -->
+    <isaac.version>3.14</isaac.version><!--TODO Eliminate Snapshot if present -->
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.	See ant execution below-->
   </properties>
