--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.16-SNAPSHOT</version><!--TODO Eliminate Snapshot if present -->
+    <version>3.15</version><!--TODO Eliminate Snapshot if present -->
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
   <artifactId>rails_prisme</artifactId>
-  <version>1.29-SNAPSHOT</version><!--TODO THIS IS THE ONLY PLACE SNAPSHOT CAN EXIST BEFORE MAKING A RELEASE!!-->
+  <version>1.29</version><!--TODO THIS IS THE ONLY PLACE SNAPSHOT CAN EXIST BEFORE MAKING A RELEASE!!-->
   <packaging>pom</packaging>
 
   <name>ISAAC Rails PRISME</name>
@@ -25,7 +25,7 @@
   <properties>
     <rails_common.version>1.35-SNAPSHOT</rails_common.version> <!--TODO Put new rails common version here if it has been changed -->
     <!--Open up the assembly.xml file in rails common if new directories are added. -->
-    <isaac.version>3.16-SNAPSHOT</isaac.version><!--TODO Eliminate Snapshot if present -->
+    <isaac.version>3.15</isaac.version><!--TODO Eliminate Snapshot if present -->
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.	See ant execution below-->
   </properties>
