--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.18-SNAPSHOT</version><!--TODO Eliminate Snapshot if present -->
+    <version>3.17</version><!--TODO Eliminate Snapshot if present -->
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
@@ -23,7 +23,7 @@
   </description>
 
   <properties>
-    <rails_common.version>1.41-SNAPSHOT</rails_common.version> <!--TODO Put new rails common version here if it has been changed -->
+    <rails_common.version>1.41</rails_common.version> <!--TODO Put new rails common version here if it has been changed -->
     <!--Open up the assembly.xml file in rails common if new directories are added. -->
     <isaac.version>3.18-SNAPSHOT</isaac.version><!--TODO Eliminate Snapshot if present -->
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
