added a prisme property and erb check to see if we are showing the log_event tab page

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -14,3 +14,6 @@ warmup_apache = 500
 #the database file may live here too, but that location is configured in database.yml
 #database.yml is processed before our initializers run so it must be this way...
 data_directory = /app/prismeData
+
+#flag determining if we should show the log events tabpage
+show_log_events=false
