updated the prisme properties config file to show log events tabpage for admin users

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -16,4 +16,4 @@ warmup_apache = 500
 data_directory = /app/prismeData
 
 #flag determining if we should show the log events tabpage
-show_log_events=false
+show_log_events=true
