--- a/config/tds/site_data.yml
+++ b/config/tds/site_data.yml
@@ -1,439 +1,439 @@
 ---
-- :VA_SITE_ID: '442'
-  :NAME: Cheyenne, WY
-  :TYPE: Production
-- :VA_SITE_ID: '443'
-  :NAME: Martinsburg, WV
-  :TYPE: Production
-- :VA_SITE_ID: '444'
-  :NAME: St. Louis (Heartland-East HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '445'
-  :NAME: Manila OC, PI
-  :TYPE: Production
-- :VA_SITE_ID: '446'
-  :NAME: Togus, ME
-  :TYPE: Production
-- :VA_SITE_ID: '447'
-  :NAME: White River Junction, VT
-  :TYPE: Production
-- :VA_SITE_ID: '448'
-  :NAME: Fort Harrison, MT
-  :TYPE: Production
-- :VA_SITE_ID: '449'
-  :NAME: Fargo, ND
-  :TYPE: Production
-- :VA_SITE_ID: '450'
-  :NAME: Sioux Falls, SD
-  :TYPE: Production
-- :VA_SITE_ID: '451'
-  :NAME: Honolulu, HI
-  :TYPE: Production
-- :VA_SITE_ID: '452'
-  :NAME: Wilmington, DE
-  :TYPE: Production
-- :VA_SITE_ID: '453'
-  :NAME: Anchorage, AK (OPC)
-  :TYPE: Production
-- :VA_SITE_ID: '454'
-  :NAME: Albuquerque, NM
-  :TYPE: Production
-- :VA_SITE_ID: '455'
-  :NAME: Alexandria, LA
-  :TYPE: Production
-- :VA_SITE_ID: '456'
-  :NAME: Altoona, PA
-  :TYPE: Production
-- :VA_SITE_ID: '457'
-  :NAME: Amarillo, TX
-  :TYPE: Production
-- :VA_SITE_ID: '458'
-  :NAME: Ann Arbor, MI
-  :TYPE: Production
-- :VA_SITE_ID: '459'
-  :NAME: Atlanta, GA
-  :TYPE: Production
-- :VA_SITE_ID: '460'
-  :NAME: Augusta, GA (C)
-  :TYPE: Production
-- :VA_SITE_ID: '461'
-  :NAME: Baltimore, MD (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '462'
-  :NAME: Battle Creek, MI
-  :TYPE: Production
-- :VA_SITE_ID: '463'
-  :NAME: Bay Pines, FL
-  :TYPE: Production
-- :VA_SITE_ID: '464'
-  :NAME: Beckley, WV
-  :TYPE: Production
-- :VA_SITE_ID: '465'
-  :NAME: Bedford, MA
-  :TYPE: Production
-- :VA_SITE_ID: '466'
-  :NAME: Big Spring, TX
-  :TYPE: Production
-- :VA_SITE_ID: '467'
-  :NAME: Biloxi, MS (C)
-  :TYPE: Production
-- :VA_SITE_ID: '468'
-  :NAME: Birmingham, AL
-  :TYPE: Production
-- :VA_SITE_ID: '469'
-  :NAME: Boston-Jamaica Plain, MA (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '470'
-  :NAME: Bronx, NY
-  :TYPE: Production
-- :VA_SITE_ID: '471'
-  :NAME: Buffalo, NY (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '472'
-  :NAME: Butler, PA
-  :TYPE: Production
-- :VA_SITE_ID: '473'
-  :NAME: Boise, ID
-  :TYPE: Production
-- :VA_SITE_ID: '474'
-  :NAME: Charleston, SC
-  :TYPE: Production
-- :VA_SITE_ID: '475'
-  :NAME: Chicago Westside, IL
-  :TYPE: Production
-- :VA_SITE_ID: '476'
-  :NAME: Chillicothe, OH
-  :TYPE: Production
-- :VA_SITE_ID: '477'
-  :NAME: Cincinnati, OH
-  :TYPE: Production
-- :VA_SITE_ID: '478'
-  :NAME: Clarksburg, WV
-  :TYPE: Production
-- :VA_SITE_ID: '479'
-  :NAME: Cleveland, OH
-  :TYPE: Production
-- :VA_SITE_ID: '480'
-  :NAME: Coatesville, PA
-  :TYPE: Production
-- :VA_SITE_ID: '481'
-  :NAME: Columbia, SC
-  :TYPE: Production
-- :VA_SITE_ID: '482'
-  :NAME: Miami, FL
-  :TYPE: Production
-- :VA_SITE_ID: '483'
-  :NAME: West Palm Beach, FL
-  :TYPE: Production
-- :VA_SITE_ID: '484'
-  :NAME: Dallas, TX (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '485'
-  :NAME: Danville (Illiana HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '486'
-  :NAME: Dayton, OH
-  :TYPE: Production
-- :VA_SITE_ID: '487'
-  :NAME: Detroit, MI
-  :TYPE: Production
-- :VA_SITE_ID: '488'
-  :NAME: Denver, CO (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '489'
-  :NAME: North Chicago, IL
-  :TYPE: Production
-- :VA_SITE_ID: '490'
-  :NAME: Dublin, GA
-  :TYPE: Production
-- :VA_SITE_ID: '491'
-  :NAME: Durham, NC
-  :TYPE: Production
-- :VA_SITE_ID: '492'
-  :NAME: East Orange, NJ (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '493'
-  :NAME: Erie, PA
-  :TYPE: Production
-- :VA_SITE_ID: '494'
-  :NAME: Fayetteville, AR
-  :TYPE: Production
-- :VA_SITE_ID: '495'
-  :NAME: Fayetteville, NC
-  :TYPE: Production
-- :VA_SITE_ID: '496'
-  :NAME: Fort Meade, SD
-  :TYPE: Production
-- :VA_SITE_ID: '497'
-  :NAME: Fresno, CA
-  :TYPE: Production
-- :VA_SITE_ID: '498'
-  :NAME: Gainesville, FL
-  :TYPE: Production
-- :VA_SITE_ID: '499'
-  :NAME: Grand Junction, CO
-  :TYPE: Production
-- :VA_SITE_ID: '500'
-  :NAME: Hines, IL
-  :TYPE: Production
-- :VA_SITE_ID: '501'
-  :NAME: Houston, TX
-  :TYPE: Production
-- :VA_SITE_ID: '502'
-  :NAME: Huntington, WV
-  :TYPE: Production
-- :VA_SITE_ID: '503'
-  :NAME: Indianapolis, IN (C)
-  :TYPE: Production
-- :VA_SITE_ID: '504'
-  :NAME: Iron Mountain, MI
-  :TYPE: Production
-- :VA_SITE_ID: '505'
-  :NAME: Jackson, MS
-  :TYPE: Production
-- :VA_SITE_ID: '506'
-  :NAME: Kansas City (Heartland-West HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '507'
-  :NAME: Hampton, VA
-  :TYPE: Production
-- :VA_SITE_ID: '508'
-  :NAME: Las Vegas, NV
-  :TYPE: Production
-- :VA_SITE_ID: '509'
-  :NAME: Lebanon, PA
-  :TYPE: Production
-- :VA_SITE_ID: '510'
-  :NAME: Lexington, KY
-  :TYPE: Production
-- :VA_SITE_ID: '511'
-  :NAME: Little Rock, AR (C)
-  :TYPE: Production
-- :VA_SITE_ID: '512'
-  :NAME: Long Beach, CA
-  :TYPE: Production
-- :VA_SITE_ID: '513'
-  :NAME: Louisville, KY
-  :TYPE: Production
-- :VA_SITE_ID: '514'
-  :NAME: Loma Linda, CA
-  :TYPE: Production
-- :VA_SITE_ID: '515'
-  :NAME: Madison, WI
-  :TYPE: Production
-- :VA_SITE_ID: '516'
-  :NAME: Manchester, NH
-  :TYPE: Production
-- :VA_SITE_ID: '517'
-  :NAME: Marion, IN (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '518'
-  :NAME: Martinez, CA (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '519'
-  :NAME: Memphis, TN
-  :TYPE: Production
-- :VA_SITE_ID: '520'
-  :NAME: Minneapolis, MN
-  :TYPE: Production
-- :VA_SITE_ID: '521'
-  :NAME: Montgomery, AL (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '522'
-  :NAME: Montrose, NY
-  :TYPE: Production
-- :VA_SITE_ID: '523'
-  :NAME: Mountain Home, TN
-  :TYPE: Production
-- :VA_SITE_ID: '524'
-  :NAME: Muskogee, OK
-  :TYPE: Production
-- :VA_SITE_ID: '525'
-  :NAME: Nashville, TN
-  :TYPE: Production
-- :VA_SITE_ID: '526'
-  :NAME: New Orleans, LA
-  :TYPE: Production
-- :VA_SITE_ID: '527'
-  :NAME: New York Harbor (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '528'
-  :NAME: Northampton, MA
-  :TYPE: Production
-- :VA_SITE_ID: '529'
-  :NAME: Northport, NY
-  :TYPE: Production
-- :VA_SITE_ID: '530'
-  :NAME: Oklahoma City, OK
-  :TYPE: Production
-- :VA_SITE_ID: '531'
-  :NAME: Omaha, NE (Central Plains HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '532'
-  :NAME: Asheville, NC
-  :TYPE: Production
-- :VA_SITE_ID: '533'
-  :NAME: Palo Alto HCS
-  :TYPE: Production
-- :VA_SITE_ID: '534'
-  :NAME: Philadelphia, PA
-  :TYPE: Production
-- :VA_SITE_ID: '535'
-  :NAME: Phoenix, AZ
-  :TYPE: Production
-- :VA_SITE_ID: '536'
-  :NAME: Pittsburgh HCS
-  :TYPE: Production
-- :VA_SITE_ID: '537'
-  :NAME: Portland, OR (C)
-  :TYPE: Production
-- :VA_SITE_ID: '538'
-  :NAME: Prescott, AZ
-  :TYPE: Production
-- :VA_SITE_ID: '539'
-  :NAME: Providence, RI
-  :TYPE: Production
-- :VA_SITE_ID: '540'
-  :NAME: Richmond, VA
-  :TYPE: Production
-- :VA_SITE_ID: '541'
-  :NAME: Roseburg, OR
-  :TYPE: Production
-- :VA_SITE_ID: '542'
-  :NAME: Reno, NV
-  :TYPE: Production
-- :VA_SITE_ID: '543'
-  :NAME: Saginaw, MI
-  :TYPE: Production
-- :VA_SITE_ID: '544'
-  :NAME: St Cloud, MN
-  :TYPE: Production
-- :VA_SITE_ID: '545'
-  :NAME: Salem, VA
-  :TYPE: Production
-- :VA_SITE_ID: '546'
-  :NAME: Salisbury, NC
-  :TYPE: Production
-- :VA_SITE_ID: '547'
-  :NAME: Salt Lake City, UT
-  :TYPE: Production
-- :VA_SITE_ID: '548'
-  :NAME: San Francisco, CA
-  :TYPE: Production
-- :VA_SITE_ID: '549'
-  :NAME: Seattle, WA
-  :TYPE: Production
-- :VA_SITE_ID: '550'
-  :NAME: San Diego, CA
-  :TYPE: Production
-- :VA_SITE_ID: '551'
-  :NAME: Sheridan, WY
-  :TYPE: Production
-- :VA_SITE_ID: '552'
-  :NAME: Shreveport, LA
-  :TYPE: Production
-- :VA_SITE_ID: '553'
-  :NAME: Spokane, WA
-  :TYPE: Production
-- :VA_SITE_ID: '554'
-  :NAME: San Antonio, TX
-  :TYPE: Production
-- :VA_SITE_ID: '555'
-  :NAME: San Juan, PR
-  :TYPE: Production
-- :VA_SITE_ID: '556'
-  :NAME: Tampa, FL
-  :TYPE: Production
-- :VA_SITE_ID: '557'
-  :NAME: Temple, TX (Central Texas HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '558'
-  :NAME: Tomah, WI
-  :TYPE: Production
-- :VA_SITE_ID: '559'
-  :NAME: Tucson, AZ
-  :TYPE: Production
-- :VA_SITE_ID: '560'
-  :NAME: Tuscaloosa, AL
-  :TYPE: Production
-- :VA_SITE_ID: '561'
-  :NAME: Walla Walla, WA
-  :TYPE: Production
-- :VA_SITE_ID: '562'
-  :NAME: Washington, DC
-  :TYPE: Production
-- :VA_SITE_ID: '563'
-  :NAME: West Haven, CT (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '564'
-  :NAME: Los Angeles, CA (HCS)
-  :TYPE: Production
-- :VA_SITE_ID: '565'
-  :NAME: White City, OR (DOM)
-  :TYPE: Production
-- :VA_SITE_ID: '566'
-  :NAME: Wilkes Barre, PA
-  :TYPE: Production
-- :VA_SITE_ID: '567'
-  :NAME: Milwaukee, WI
-  :TYPE: Production
-- :VA_SITE_ID: '568'
-  :NAME: El Paso, TX
-  :TYPE: Production
-- :VA_SITE_ID: '569'
-  :NAME: Columbus, OH (OPC)
-  :TYPE: Production
-- :VA_SITE_ID: '570'
-  :NAME: Albany ACG
-  :TYPE: Production
-- :VA_SITE_ID: '571'
-  :NAME: Albany ACT
-  :TYPE: Production
-- :VA_SITE_ID: '572'
-  :NAME: Albany ACR
-  :TYPE: Production
-- :VA_SITE_ID: '573'
-  :NAME: Salt Lake SCG
-  :TYPE: Production
-- :VA_SITE_ID: '574'
-  :NAME: Salt Lake SCT
-  :TYPE: Production
-- :VA_SITE_ID: '575'
-  :NAME: Salt Lake SCR
-  :TYPE: Production
-- :VA_SITE_ID: '576'
-  :NAME: Platinum
-  :TYPE: Production
-- :VA_SITE_ID: '577'
-  :NAME: CampMaster
-  :TYPE: Production
-- :VA_SITE_ID: '578'
-  :NAME: ImageMaster
-  :TYPE: Production
-- :VA_SITE_ID: '579'
-  :NAME: Orlando, FL
-  :TYPE: Production
-- :VA_SITE_ID: '580'
-  :NAME: Valley Coastal Bend, TX
-  :TYPE: Production
-- :VA_SITE_ID: '581'
-  :NAME: CHAMPVA
-  :TYPE: Production
-- :VA_SITE_ID: '582'
-  :NAME: STLVETSDEV
-  :TYPE: Internal
-- :VA_SITE_ID: '583'
-  :NAME: LEXPLT
-  :TYPE: Internal
-- :VA_SITE_ID: '584'
-  :NAME: MARTVETSDEV
-  :TYPE: SQA
-- :VA_SITE_ID: '585'
-  :NAME: BAYP11
-  :TYPE: SQA
-- :VA_SITE_ID: '586'
-  :NAME: CHEY59
-  :TYPE: Production
-- :VA_SITE_ID: '587'
-  :NAME: MIL2
-  :TYPE: Production
+- VA_SITE_ID: '442'
+  NAME: Cheyenne, WY
+  TYPE: Production
+- VA_SITE_ID: '443'
+  NAME: Martinsburg, WV
+  TYPE: Production
+- VA_SITE_ID: '444'
+  NAME: St. Louis (Heartland-East HCS)
+  TYPE: Production
+- VA_SITE_ID: '445'
+  NAME: Manila OC, PI
+  TYPE: Production
+- VA_SITE_ID: '446'
+  NAME: Togus, ME
+  TYPE: Production
+- VA_SITE_ID: '447'
+  NAME: White River Junction, VT
+  TYPE: Production
+- VA_SITE_ID: '448'
+  NAME: Fort Harrison, MT
+  TYPE: Production
+- VA_SITE_ID: '449'
+  NAME: Fargo, ND
+  TYPE: Production
+- VA_SITE_ID: '450'
+  NAME: Sioux Falls, SD
+  TYPE: Production
+- VA_SITE_ID: '451'
+  NAME: Honolulu, HI
+  TYPE: Production
+- VA_SITE_ID: '452'
+  NAME: Wilmington, DE
+  TYPE: Production
+- VA_SITE_ID: '453'
+  NAME: Anchorage, AK (OPC)
+  TYPE: Production
+- VA_SITE_ID: '454'
+  NAME: Albuquerque, NM
+  TYPE: Production
+- VA_SITE_ID: '455'
+  NAME: Alexandria, LA
+  TYPE: Production
+- VA_SITE_ID: '456'
+  NAME: Altoona, PA
+  TYPE: Production
+- VA_SITE_ID: '457'
+  NAME: Amarillo, TX
+  TYPE: Production
+- VA_SITE_ID: '458'
+  NAME: Ann Arbor, MI
+  TYPE: Production
+- VA_SITE_ID: '459'
+  NAME: Atlanta, GA
+  TYPE: Production
+- VA_SITE_ID: '460'
+  NAME: Augusta, GA (C)
+  TYPE: Production
+- VA_SITE_ID: '461'
+  NAME: Baltimore, MD (HCS)
+  TYPE: Production
+- VA_SITE_ID: '462'
+  NAME: Battle Creek, MI
+  TYPE: Production
+- VA_SITE_ID: '463'
+  NAME: Bay Pines, FL
+  TYPE: Production
+- VA_SITE_ID: '464'
+  NAME: Beckley, WV
+  TYPE: Production
+- VA_SITE_ID: '465'
+  NAME: Bedford, MA
+  TYPE: Production
+- VA_SITE_ID: '466'
+  NAME: Big Spring, TX
+  TYPE: Production
+- VA_SITE_ID: '467'
+  NAME: Biloxi, MS (C)
+  TYPE: Production
+- VA_SITE_ID: '468'
+  NAME: Birmingham, AL
+  TYPE: Production
+- VA_SITE_ID: '469'
+  NAME: Boston-Jamaica Plain, MA (HCS)
+  TYPE: Production
+- VA_SITE_ID: '470'
+  NAME: Bronx, NY
+  TYPE: Production
+- VA_SITE_ID: '471'
+  NAME: Buffalo, NY (HCS)
+  TYPE: Production
+- VA_SITE_ID: '472'
+  NAME: Butler, PA
+  TYPE: Production
+- VA_SITE_ID: '473'
+  NAME: Boise, ID
+  TYPE: Production
+- VA_SITE_ID: '474'
+  NAME: Charleston, SC
+  TYPE: Production
+- VA_SITE_ID: '475'
+  NAME: Chicago Westside, IL
+  TYPE: Production
+- VA_SITE_ID: '476'
+  NAME: Chillicothe, OH
+  TYPE: Production
+- VA_SITE_ID: '477'
+  NAME: Cincinnati, OH
+  TYPE: Production
+- VA_SITE_ID: '478'
+  NAME: Clarksburg, WV
+  TYPE: Production
+- VA_SITE_ID: '479'
+  NAME: Cleveland, OH
+  TYPE: Production
+- VA_SITE_ID: '480'
+  NAME: Coatesville, PA
+  TYPE: Production
+- VA_SITE_ID: '481'
+  NAME: Columbia, SC
+  TYPE: Production
+- VA_SITE_ID: '482'
+  NAME: Miami, FL
+  TYPE: Production
+- VA_SITE_ID: '483'
+  NAME: West Palm Beach, FL
+  TYPE: Production
+- VA_SITE_ID: '484'
+  NAME: Dallas, TX (HCS)
+  TYPE: Production
+- VA_SITE_ID: '485'
+  NAME: Danville (Illiana HCS)
+  TYPE: Production
+- VA_SITE_ID: '486'
+  NAME: Dayton, OH
+  TYPE: Production
+- VA_SITE_ID: '487'
+  NAME: Detroit, MI
+  TYPE: Production
+- VA_SITE_ID: '488'
+  NAME: Denver, CO (HCS)
+  TYPE: Production
+- VA_SITE_ID: '489'
+  NAME: North Chicago, IL
+  TYPE: Production
+- VA_SITE_ID: '490'
+  NAME: Dublin, GA
+  TYPE: Production
+- VA_SITE_ID: '491'
+  NAME: Durham, NC
+  TYPE: Production
+- VA_SITE_ID: '492'
+  NAME: East Orange, NJ (HCS)
+  TYPE: Production
+- VA_SITE_ID: '493'
+  NAME: Erie, PA
+  TYPE: Production
+- VA_SITE_ID: '494'
+  NAME: Fayetteville, AR
+  TYPE: Production
+- VA_SITE_ID: '495'
+  NAME: Fayetteville, NC
+  TYPE: Production
+- VA_SITE_ID: '496'
+  NAME: Fort Meade, SD
+  TYPE: Production
+- VA_SITE_ID: '497'
+  NAME: Fresno, CA
+  TYPE: Production
+- VA_SITE_ID: '498'
+  NAME: Gainesville, FL
+  TYPE: Production
+- VA_SITE_ID: '499'
+  NAME: Grand Junction, CO
+  TYPE: Production
+- VA_SITE_ID: '500'
+  NAME: Hines, IL
+  TYPE: Production
+- VA_SITE_ID: '501'
+  NAME: Houston, TX
+  TYPE: Production
+- VA_SITE_ID: '502'
+  NAME: Huntington, WV
+  TYPE: Production
+- VA_SITE_ID: '503'
+  NAME: Indianapolis, IN (C)
+  TYPE: Production
+- VA_SITE_ID: '504'
+  NAME: Iron Mountain, MI
+  TYPE: Production
+- VA_SITE_ID: '505'
+  NAME: Jackson, MS
+  TYPE: Production
+- VA_SITE_ID: '506'
+  NAME: Kansas City (Heartland-West HCS)
+  TYPE: Production
+- VA_SITE_ID: '507'
+  NAME: Hampton, VA
+  TYPE: Production
+- VA_SITE_ID: '508'
+  NAME: Las Vegas, NV
+  TYPE: Production
+- VA_SITE_ID: '509'
+  NAME: Lebanon, PA
+  TYPE: Production
+- VA_SITE_ID: '510'
+  NAME: Lexington, KY
+  TYPE: Production
+- VA_SITE_ID: '511'
+  NAME: Little Rock, AR (C)
+  TYPE: Production
+- VA_SITE_ID: '512'
+  NAME: Long Beach, CA
+  TYPE: Production
+- VA_SITE_ID: '513'
+  NAME: Louisville, KY
+  TYPE: Production
+- VA_SITE_ID: '514'
+  NAME: Loma Linda, CA
+  TYPE: Production
+- VA_SITE_ID: '515'
+  NAME: Madison, WI
+  TYPE: Production
+- VA_SITE_ID: '516'
+  NAME: Manchester, NH
+  TYPE: Production
+- VA_SITE_ID: '517'
+  NAME: Marion, IN (HCS)
+  TYPE: Production
+- VA_SITE_ID: '518'
+  NAME: Martinez, CA (HCS)
+  TYPE: Production
+- VA_SITE_ID: '519'
+  NAME: Memphis, TN
+  TYPE: Production
+- VA_SITE_ID: '520'
+  NAME: Minneapolis, MN
+  TYPE: Production
+- VA_SITE_ID: '521'
+  NAME: Montgomery, AL (HCS)
+  TYPE: Production
+- VA_SITE_ID: '522'
+  NAME: Montrose, NY
+  TYPE: Production
+- VA_SITE_ID: '523'
+  NAME: Mountain Home, TN
+  TYPE: Production
+- VA_SITE_ID: '524'
+  NAME: Muskogee, OK
+  TYPE: Production
+- VA_SITE_ID: '525'
+  NAME: Nashville, TN
+  TYPE: Production
+- VA_SITE_ID: '526'
+  NAME: New Orleans, LA
+  TYPE: Production
+- VA_SITE_ID: '527'
+  NAME: New York Harbor (HCS)
+  TYPE: Production
+- VA_SITE_ID: '528'
+  NAME: Northampton, MA
+  TYPE: Production
+- VA_SITE_ID: '529'
+  NAME: Northport, NY
+  TYPE: Production
+- VA_SITE_ID: '530'
+  NAME: Oklahoma City, OK
+  TYPE: Production
+- VA_SITE_ID: '531'
+  NAME: Omaha, NE (Central Plains HCS)
+  TYPE: Production
+- VA_SITE_ID: '532'
+  NAME: Asheville, NC
+  TYPE: Production
+- VA_SITE_ID: '533'
+  NAME: Palo Alto HCS
+  TYPE: Production
+- VA_SITE_ID: '534'
+  NAME: Philadelphia, PA
+  TYPE: Production
+- VA_SITE_ID: '535'
+  NAME: Phoenix, AZ
+  TYPE: Production
+- VA_SITE_ID: '536'
+  NAME: Pittsburgh HCS
+  TYPE: Production
+- VA_SITE_ID: '537'
+  NAME: Portland, OR (C)
+  TYPE: Production
+- VA_SITE_ID: '538'
+  NAME: Prescott, AZ
+  TYPE: Production
+- VA_SITE_ID: '539'
+  NAME: Providence, RI
+  TYPE: Production
+- VA_SITE_ID: '540'
+  NAME: Richmond, VA
+  TYPE: Production
+- VA_SITE_ID: '541'
+  NAME: Roseburg, OR
+  TYPE: Production
+- VA_SITE_ID: '542'
+  NAME: Reno, NV
+  TYPE: Production
+- VA_SITE_ID: '543'
+  NAME: Saginaw, MI
+  TYPE: Production
+- VA_SITE_ID: '544'
+  NAME: St Cloud, MN
+  TYPE: Production
+- VA_SITE_ID: '545'
+  NAME: Salem, VA
+  TYPE: Production
+- VA_SITE_ID: '546'
+  NAME: Salisbury, NC
+  TYPE: Production
+- VA_SITE_ID: '547'
+  NAME: Salt Lake City, UT
+  TYPE: Production
+- VA_SITE_ID: '548'
+  NAME: San Francisco, CA
+  TYPE: Production
+- VA_SITE_ID: '549'
+  NAME: Seattle, WA
+  TYPE: Production
+- VA_SITE_ID: '550'
+  NAME: San Diego, CA
+  TYPE: Production
+- VA_SITE_ID: '551'
+  NAME: Sheridan, WY
+  TYPE: Production
+- VA_SITE_ID: '552'
+  NAME: Shreveport, LA
+  TYPE: Production
+- VA_SITE_ID: '553'
+  NAME: Spokane, WA
+  TYPE: Production
+- VA_SITE_ID: '554'
+  NAME: San Antonio, TX
+  TYPE: Production
+- VA_SITE_ID: '555'
+  NAME: San Juan, PR
+  TYPE: Production
+- VA_SITE_ID: '556'
+  NAME: Tampa, FL
+  TYPE: Production
+- VA_SITE_ID: '557'
+  NAME: Temple, TX (Central Texas HCS)
+  TYPE: Production
+- VA_SITE_ID: '558'
+  NAME: Tomah, WI
+  TYPE: Production
+- VA_SITE_ID: '559'
+  NAME: Tucson, AZ
+  TYPE: Production
+- VA_SITE_ID: '560'
+  NAME: Tuscaloosa, AL
+  TYPE: Production
+- VA_SITE_ID: '561'
+  NAME: Walla Walla, WA
+  TYPE: Production
+- VA_SITE_ID: '562'
+  NAME: Washington, DC
+  TYPE: Production
+- VA_SITE_ID: '563'
+  NAME: West Haven, CT (HCS)
+  TYPE: Production
+- VA_SITE_ID: '564'
+  NAME: Los Angeles, CA (HCS)
+  TYPE: Production
+- VA_SITE_ID: '565'
+  NAME: White City, OR (DOM)
+  TYPE: Production
+- VA_SITE_ID: '566'
+  NAME: Wilkes Barre, PA
+  TYPE: Production
+- VA_SITE_ID: '567'
+  NAME: Milwaukee, WI
+  TYPE: Production
+- VA_SITE_ID: '568'
+  NAME: El Paso, TX
+  TYPE: Production
+- VA_SITE_ID: '569'
+  NAME: Columbus, OH (OPC)
+  TYPE: Production
+- VA_SITE_ID: '570'
+  NAME: Albany ACG
+  TYPE: Production
+- VA_SITE_ID: '571'
+  NAME: Albany ACT
+  TYPE: Production
+- VA_SITE_ID: '572'
+  NAME: Albany ACR
+  TYPE: Production
+- VA_SITE_ID: '573'
+  NAME: Salt Lake SCG
+  TYPE: Production
+- VA_SITE_ID: '574'
+  NAME: Salt Lake SCT
+  TYPE: Production
+- VA_SITE_ID: '575'
+  NAME: Salt Lake SCR
+  TYPE: Production
+- VA_SITE_ID: '576'
+  NAME: Platinum
+  TYPE: Production
+- VA_SITE_ID: '577'
+  NAME: CampMaster
+  TYPE: Production
+- VA_SITE_ID: '578'
+  NAME: ImageMaster
+  TYPE: Production
+- VA_SITE_ID: '579'
+  NAME: Orlando, FL
+  TYPE: Production
+- VA_SITE_ID: '580'
+  NAME: Valley Coastal Bend, TX
+  TYPE: Production
+- VA_SITE_ID: '581'
+  NAME: CHAMPVA
+  TYPE: Production
+- VA_SITE_ID: '582'
+  NAME: STLVETSDEV
+  TYPE: Internal
+- VA_SITE_ID: '583'
+  NAME: LEXPLT
+  TYPE: Internal
+- VA_SITE_ID: '584'
+  NAME: MARTVETSDEV
+  TYPE: SQA
+- VA_SITE_ID: '585'
+  NAME: BAYP11
+  TYPE: SQA
+- VA_SITE_ID: '586'
+  NAME: CHEY59
+  TYPE: Production
+- VA_SITE_ID: '587'
+  NAME: MIL2
+  TYPE: Production
