--- a/config/aitc_environment.yml
+++ b/config/aitc_environment.yml
@@ -13,11 +13,11 @@ vaausappctt203.aac.va.gov: PROD
 vaausappctt204.aac.va.gov: PROD
 vaausappctt205.aac.va.gov: PROD
 vaausdbsctt202.aac.va.gov: PROD
-vaausappctt701.aac.va.gov: SQA
-vaausappctt702.aac.va.gov: SQA
-vaausappctt703.aac.va.gov: SQA
-vaausappctt704.aac.va.gov: SQA
-vaausdbsctt700.aac.va.gov: SQA
+vaausappctt701.aac.va.gov: INTEGRATION
+vaausappctt702.aac.va.gov: INTEGRATION
+vaausappctt703.aac.va.gov: INTEGRATION
+vaausappctt704.aac.va.gov: INTEGRATION
+vaausdbsctt700.aac.va.gov: INTEGRATION
 vaauscttdbs82.aac.va.gov: TEST
 vaauscttweb82.aac.va.gov: TEST
 vaauscttweb83.aac.va.gov: TEST
