--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -4,7 +4,11 @@ log_manager=org.apache.logging.log4j.jul.LogManager
 # trim jobs older than x days old
 job_queue_trim=90
 #trim log events older than x days old
-log_event_trim_trim=90
+log_event_trim=90
+
+#trim UuidProps not touched for x days
+uuid_props_trim=90
+
 resched_clean_queue_days=1
 #hitting http://localhost:3000/utilities/warmup
 #will cause ajax to warmup apache...
