Can I get the HL7Messaging integration test to run on vadev?

--- a/config/aitc_environment.yml
+++ b/config/aitc_environment.yml
@@ -24,3 +24,4 @@ vaauscttweb83.aac.va.gov: TEST
 vaauscttweb84.aac.va.gov: TEST
 vaauscttweb85.aac.va.gov: TEST
 MSI: DEV_BOX
+vadev.mantech.com: DEV_BOX
