--- a/config/aitc_environment.yml
+++ b/config/aitc_environment.yml
@@ -24,4 +24,4 @@ vaauscttweb83.aac.va.gov: TEST
 vaauscttweb84.aac.va.gov: TEST
 vaauscttweb85.aac.va.gov: TEST
 MSI: DEV_BOX
-vadev.mantech.com: DEV_BOX
+VADEV: DEV_BOX
