added property and filter of komet_c.wars based on the environments listed in the prisme.properties file

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -21,3 +21,6 @@ data_directory = /app/prismeData
 
 #flag determining if we should show the log events tab page
 show_log_events=true
+
+# this flag is used in the app_deployer to filter out komet wars with the 'c' classifier in the enviroments identified
+komet_c_include_env=DEV_BOX,PRE-PROD,PROD
