Update interface engine url and ports for all enivronments.

--- a/config/hl7/hl7_server_config.yml
+++ b/config/hl7/hl7_server_config.yml
@@ -6,42 +6,42 @@
 DEV_BOX:
   sending_facility_namespace_id: 200ET1
   ets_server: vaauscttdbs80.aac.va.gov
-  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
   listener_port: 49990
   hl7_encoding_type: VB
   use_interface_engine: false #set this to false for devbox
 DEV:
   sending_facility_namespace_id: 200ET1
   ets_server: vaauscttdbs80.aac.va.gov
-  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  listener_port: 49990
+  hl7_encoding_type: VB
+  use_interface_engine: true
+TEST:
+  sending_facility_namespace_id: 200ET10
+  ets_server: vaauscttdbs82.aac.va.gov
+  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
   listener_port: 49990
   hl7_encoding_type: VB
   use_interface_engine: true
 INTEGRATION:
-  sending_facility_namespace_id: 200ET10
-  ets_server: vaauscttdbs82.aac.va.gov
-  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
-  listener_port: 49990
-  hl7_encoding_type: VB
-  use_interface_engine: true
-SQA:
   sending_facility_namespace_id: 200ET20
   ets_server: vaausdbsctt700.aac.va.gov
-  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  interface_engine_URL: http://vaaacvies64.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
   listener_port: 49990
   hl7_encoding_type: VB
   use_interface_engine: true
 PRE-PROD:
   sending_facility_namespace_id: 200ET30
   ets_server: vaausdbsctt402.aac.va.gov
-  interface_engine_URL: http://vaaacviep44.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  interface_engine_URL: http://vaaacviep44.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
   listener_port: 49990
   hl7_encoding_type: VB
   use_interface_engine: true
 PROD:
   sending_facility_namespace_id: 200ETS
   ets_server: vaausdbsctt202.aac.va.gov
-  interface_engine_URL: http://vaaacviev24.aac.dva.va.gov:8090/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
+  interface_engine_URL: http://vaaacviev24.aac.dva.va.gov:8080/FrameworkClient-1.1/Framework2ServletHTTPtoChannel
   listener_port: 49990
   hl7_encoding_type: VB
   use_interface_engine: true
