--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -1,3 +1,4 @@
+application_name = VA Terminology Dashboard
 #System.setProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager");
 log_manager=org.apache.logging.log4j.jul.LogManager
 
