468082, prisme name change

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -1,4 +1,5 @@
 application_name = VA Terminology Dashboard
+komet_name = Terminology Editor
 #System.setProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager");
 log_manager=org.apache.logging.log4j.jul.LogManager
 
