Moving HL7 checksum db writes off of the Fx thread and onto a thread pool.

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -26,3 +26,7 @@ show_log_events=true
 
 # this flag is used in the app_deployer to filter out komet wars with the 'c' classifier in the enviroments identified
 komet_c_include_env=DEV_BOX,PRE-PROD,PROD
+
+#thread pool size for writing to the db (if needed).  Currently used by the HL7 messaging engine to divert work
+#off of the Fx thread.
+db_writer_thread_pool = 25
