--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -11,6 +11,9 @@ log_event_trim=90
 #trim UuidProps not touched for x days
 uuid_props_trim=90
 
+#trim Hl7 events (Checksum Discovery) not touched for x days
+hl7_trim=90
+
 resched_clean_queue_days=1
 #hitting http://localhost:3000/utilities/warmup
 #will cause ajax to warmup apache...
