Adding MARTVETSDEV site 951

--- a/config/site_data.yml
+++ b/config/site_data.yml
@@ -587,3 +587,7 @@
   name: STLVETSDEV
   site_type: SQA
   message_type: T
+- va_site_id: '951'
+  name: MARTVETSDEV
+  site_type: SQA
+  message_type: T
