--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -33,3 +33,6 @@ komet_c_include_env=DEV_BOX,PRE-PROD,PROD
 #thread pool size for writing to the db (if needed).  Currently used by the HL7 messaging engine to divert work
 #off of the Fx thread.
 db_writer_thread_pool = 25
+
+#If this key is present, only sites in the csv will be executed. (comment out when done with it.)
+site_restrictor= 950, 951
