--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<groupId>org.codehaus.cargo</groupId>
 			<artifactId>cargo-core-uberjar</artifactId>
 			<version>1.4.19</version>
+			<exclusions>
+				<exclusion>  <!-- Cargo is using a nasty old version that conflicts with things. -->
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
