--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -2,7 +2,7 @@ application_name = VA Terminology Dashboard
 komet_name = Terminology Editor
 #System.setProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager");
 log_manager=org.apache.logging.log4j.jul.LogManager
-#branch test
+#branch test 2
 # trim jobs older than x days old
 job_queue_trim=90
 #trim log events older than x days old
