--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -36,3 +36,6 @@ db_writer_thread_pool = 25
 
 #If this key is present, only sites in the csv will be executed. (comment out when done with it.)
 site_restrictor= 950, 951
+
+#list the environments where a devise login is NOT allowed
+disallow_local_logins_on=PRE_PROD,PROD
