Adding in site restriction exclusion config for pre prod and prod

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -36,6 +36,8 @@ db_writer_thread_pool = 25
 
 #If this key is present, only sites in the csv will be executed. (comment out when done with it.)
 site_restrictor= 950, 951
+#ignore site restriction(above) on environments below
+site_restriction_ignored=PRE_PROD,PROD
 
 #list the environments where a devise signup is NOT allowed
 disallow_local_signups_on=PRE_PROD,PROD
